# nolrai-scratch

./: .gitattributes  CHANGELOG.md  CHANGELOG.md.save0  README.md  nolrai-scratch.cabal  nolrai-scratch.cabal.save0  nolrai-scratch.cabal.save1  test.sh
app/: Main.hs  Options.hs
benchmark/: Main.hs
examples/: 1N4148.qsch  Amp.qsch  AudioAmp.qsch  BodePlot.qsch  DAC.qsch  ExampleUC3825A.qsch  ExampleUCC3802.qsch  FRA_SMPS.qsch  Ladder.qsch  Level2010.qsch  MiddleBrook.qsch  NelsonPassAmp.qsch  Noise.qsch  OffLine.qsch  OffLineApp.qsch  PLL.qsch  PLL_SMPS.qsch  PracticalSMPS.qsch  SMPS.qsch  Tian.qsch  TransformerSaturation.qsch  UC3825A.qsch  UCC3802.qsch  VerilogCounter.qsch  WolverineAmp.qsch
golden/: exampleFile.shapes
src/: Boxes.hs  Convert.hs  FlowCmd.hs  KiCad.hs  QSpice.hs  Shapes.hs
test/: ShapesTests.hs  Spec.hs
