cabal-version:      3.0
name:               nolrai-scratch
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Christina A. Upshaw
maintainer:         chrisaupshaw@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    README.md
    CHANGELOG.md

library
    exposed-modules:
        Shapes

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
                    , strict-base
                    , linear
                    , aeson
                    , lens
    hs-source-dirs:   src
    default-language: Haskell2010

executable nolrai-scratch
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
                    , aeson
                    , containers
                    , nolrai-scratch
                    , bytestring
                    , aeson-pretty
    hs-source-dirs:   app
    default-language: Haskell2010
