cabal-version:      3.0
name:               nolrai-scratch
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Christina A. Upshaw
maintainer:         chrisaupshaw@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
  README.md
  CHANGELOG.md

common shared-properties
  default-language: Haskell2010
  build-depends:
      base ^>= 4.16.4
    , aeson
    , lens
    , bytestring
  ghc-options:
    -Wall

library
  import: shared-properties
  exposed-modules:
      Shapes
      FlowCmd
      Convert

  -- Modules included in this library but not exported.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:    strict-base
                  , linear
  hs-source-dirs:   src

executable nolrai-scratch
  import: shared-properties
  main-is:          Main.hs
  other-modules:    Options

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:    aeson
                  , containers
                  , nolrai-scratch
                  , aeson-pretty
                  , optparse-applicative
                  , transformers
                  , deepseq
  hs-source-dirs:   app
  default-language: Haskell2010

test-suite nolrai-scratch-test
  import: shared-properties
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  build-depends:  hspec
                , tasty
                , QuickCheck
                , nolrai-scratch
  hs-source-dirs:
    test
  default-language: Haskell2010
