cabal-version:      3.0
name:               nolrai-scratch
version:            0.1.0.0

-- A short (one-line) description of the package.
-- synopsis:

-- A longer description of the package.
-- description:

-- A URL where users can report bugs.
-- bug-reports:

-- The license under which the package is released.
-- license:
author:             Christina A. Upshaw
maintainer:         chrisaupshaw@gmail.com

-- A copyright notice.
-- copyright:
-- category:
extra-source-files:
    README.md
    CHANGELOG.md

library
    exposed-modules:
        QSpice

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
                    , lens
                    , megaparsec
                    , utf8-string
                    , bytestring
                    , text
    hs-source-dirs:   src
    default-language: Haskell2010

executable qspice-reader
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base
                    , containers
                    , nolrai-scratch
                    , bytestring
                    , utf8-string
                    , megaparsec
                    , lens
                    , directory
                    , text
                    , binary
    ghc-options:
      -O2
      -threaded
    hs-source-dirs:   app
    default-language: Haskell2010

    
executable qspice-reader-prof
    main-is:          Main.hs
    build-depends:    base
                    , containers
                    , nolrai-scratch
                    , bytestring
                    , megaparsec
                    , utf8-string
                    , lens
                    , directory
                    , text
                    , binary
    ghc-options:
      -O2
      -threaded
      "-with-rtsopts=-N -p -s -hy -i0.1 -l-agu"
    hs-source-dirs:   app
    default-language: Haskell2010
